<resources>
    <string name="app_name">WordPress25</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Reader</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_me">About me</string>
    <string name="title_activity_account_settings">Account Settings</string>
    <!-- Dimensions -->
    <dimen name="row">48dp</dimen>
    <string name="title_activity_my_profil">MyProfile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- About Me -->

    <string name="about_me">About me</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="my_p">My profile</string>
    <string name="acc_set">Account Settings</string>
    <string name="scan">Scan login Code</string>
    <string name="app_set">App Settings</string>
    <string name="help">Help</string>
    <string name="share">Share Wordpress with a friend</string>
    <string name="about_w">About Wordpress</string>
    <string name="log_out">Log out of Wordpress</string>

    <!-- My Profile -->

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="x_first_name">MyFirstName</string>
    <string name="x_last_name">MyLastName</string>
    <string name="public_d_n">Public display name</string>
    <string name="x_public_d_n">MyPublicDisplayName</string>

    <!-- Account Settings -->

    <string name="username">Username</string>
    <string name="x_username">MyUsername</string>
    <string name="email">Email Address</string>
    <string name="x_email">my.email@gmail.com</string>
    <string name="primary">Primary site</string>
    <string name="web_add">Web address</string>
    <string name="x_web_add">http://yourwebsite.wordpress.com</string>
    <string name="change_pass">Change password</string>
    <string name="close_acc">Close Account</string>

    <!-- App Settings -->

    <string name="inter_lang">Interface Languages</string>
    <string name="x_languages">English (United States)</string>
    <string name="appearance">Appearance</string>
    <string name="x_appear">Light</string>
    <string name="privacy_sett">Privacy settings</string>
    <string name="open_dev_sett">Open device settings</string>
    <string name="init_screen">Initial Screen</string>
    <string name="x_init_screen">Home</string>
    <string name="media">Media</string>
    <string name="opti_images">Optimize Images</string>
    <string name="enable_opti_i">Enable to resize and compress pictures</string>
    <string name="max_image_size">Maximum Image Size</string>
    <string name="x_max_i_size">3000 px</string>
    <string name="image_q">Image Quality</string>
    <string name="x_image_q">Medium</string>
    <string name="remove_loc">Remove location from media</string>
    <string name="opti_videos">Optimize Videos</string>
    <string name="enable_opti_v">Enable to resize and compress videos</string>
    <string name="max_videos_size">Maximum Video Size</string>
    <string name="x_max_v_size">720p</string>
    <string name="video_q">Video Quality</string>
    <string name="x_video_q">High</string>

    <!-- Help -->

    <string name="contact_supp">Contact Support</string>
    <string name="browse_faq">Browse our FAQ</string>
    <string name="tickets">Tickets</string>
    <string name="contact_email">Contact email</string>
    <string name="x_contact_email">Not set</string>
    <string name="logs">Logs</string>
    <string name="version">Version 23.1.0</string>

    <!-- Dialog Log Out -->
    <string name="log_out_word">Log out of Wordpress ?</string>


    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.s</string>
    <string name="content_art_1">El beso, tema que ha fascinado a los artistas, a los escritores, a los cineastas y a todos. Se ha representado de mil y una maneras en la historia del arte, y los artistas lo han pintado ad nauseum pero este de Constantin Brancusi es una de mis favoritas representaciones. Pero como ahora en España parece que dar un beso se ha convertido en un delito capital, pues lo quiero representar yo también y lo haré de esta manera… Además os prometo que todas las gaviotas consintieron a darse un piquito así, públicamente.</string>
    <string name="content_art_2">Happenstance welcome,
dreamer that I am

Loyal to memories
and committed to progress

Professional ambitions unrequited,
I seek new avenues…

Failure a nag
provokes hesitation

Let me be!
I am independent!

This path is unique
and while I dwell
in contemplation of what ifs

I recognize my challenges,
the unreliability of illness,
expect no encores

Easier to focus
on what I can master
today.

(Watercolour mine)</string>
    <string name="content_art_3">What aspects of your cultural heritage are you most proud of or interested in?
With over 121 languages spoken in india, it is one of the most multilingual countries in the world . just like it has so many languages spoken there are a range of festivals celebrated across its different states. Food habits are multiple and varied. Clothing differs from region to region . People follow multiple religions. The forms of dance and music are diverse and many. Art too is of different styles and forms.</string>
    <string name="content_food_1">Although we live under Grace in this age and can pretty much do as we please with our physical bodies, we would do well to note that bodies are NOT our own. We were bought at a price.
Christians are urged to not be a slave to any idol, even food. So why do some crave colas and other sugary drinks while others won’t touch the stuff?</string>
    <string name="content_food_2">What’s Cooking in Gail’s Kitchen? Splurge-Worthy Goodness: Cereal Milk Smoothie! After yesterday’s post, it’s only fair to give the kids equal time on a delicious treat. Grown-ups, simply tap your heels together to be transported back to a time where you started your day at the kitchen table with a bowl of your favorite cereal. Remember how the sugary sweet morsels crunched their way to mushy softness leaving the milk at the bottom of the bowl tasting like syrup? At that point my brother would put down his spoon and lift the bowl to his mouth to slurp up the remaining goodness. Of course Mother never saw it, as she was usually standing at the counter buttering toast with her back to us. Well nowadays, the nostalgic flavor of cereal milk smoothies are a thing. Anyone with a sugar addiction is jumping for joy. And why shouldn’t they? It brings out the inner child in all of us.</string>
    <string name="content_food_3">Just click Devina Hermawan’s Youtube Channel https://youtu.be/TF995hUk4RQ</string>
    <string name="content_photography_1">Strolling the cobblestone streets of the Historic Town (November 2022)— Rebecca</string>
    <string name="content_photography_2">Just so you don’t think we spent very hour hiking or looking at tiles, today\'s jaunt will be at the port city at Pathos. There was a beautiful clear, clear, clear water beach front………</string>
    <string name="content_photography_3">Well, not just somewhere, but over by the sports stadiums is where we found ourselves a bit ago, unloading a customer’s nice but low-key Mercedes, much to the disappointment of the bar crowd who had gathered to watch from across the street.

They kept sending in a scout to see what we were up to and at one point he even walked over to see if he could get a peek inside the trailer, probably hoping we were bringing a Mariner’s or Seahawk’s themed race car out, which was funny because we do have a race car on board. It didn’t come out though and stayed covered the whole time.
</string>
    <string name="content_technology_1">Unconscious to the world
Lost in the ones and zeros
That you don’t see behind
The digital tether like a shackle
But you have the key
To the rusting lock
That gains more layers
The more time that is spent
Drowning in the river of media
Slinging and catching
Comments and likes
Sadly and completely
Establishing your worth
But do not fall for this fallacy
You are not what the device says</string>
    <string name="content_technology_2">Pre-orders open for Archax, which follows anime tradition right down to having an awesome start-up sequence.

Tokyo-based Tsubame Industries was founded in 2021 with the goal of “Turning science fiction into science reality.” Since there’s no more quintessentially Japanese version of science fiction than pilotable mecha, that’s exactly what Tsubame has built, and the company has announced that they’re now officially on sale.
</string>
</resources>