<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_app_set"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    tools:context=".ui.me.App_Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="24dp">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/inter_lang"
                    android:textSize="20dp"/>

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/x_languages"
                    android:textSize="16dp"/>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/separation"/>

        <LinearLayout
            android:id="@+id/theme"
            android:layout_width="match_parent"
            android:layout_height="@dimen/row"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:paddingLeft="24dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/appearance"
                    android:textSize="20dp"/>

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/x_appear"
                    android:textSize="16dp"/>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/separation"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:paddingLeft="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/privacy_sett"
                android:textSize="20dp"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/separation" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:paddingLeft="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/open_dev_sett"
                android:textSize="20dp"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/separation" />

        <LinearLayout
            android:id="@+id/init_screen"
            android:layout_width="match_parent"
            android:layout_height="@dimen/row"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal"
            android:paddingLeft="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/init_screen"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/x_init_screen"
                    android:textSize="16dp" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/separation" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="@dimen/row"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:gravity="center_vertical"
            android:paddingLeft="24dp"
            android:text="@string/media"
            android:textColor="@color/teal_200"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal"
            android:paddingLeft="24dp">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/opti_images"
                    android:textSize="20dp"/>

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/enable_opti_i"
                    android:textSize="16dp"/>

            </LinearLayout>

            <Switch
                android:id="@+id/switch4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingRight="24dp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/separation" />

        <LinearLayout
            android:id="@+id/max_i_s"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:orientation="horizontal"
            android:paddingLeft="24dp"
            android:background="@drawable/selector_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewMaxI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/max_image_size"
                    android:textColor="@color/disable"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/textViewMaxISet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/x_max_i_size"
                    android:textColor="@color/disable"
                    android:textSize="16dp" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/separation" />

        <LinearLayout
            android:id="@+id/image_q"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:orientation="horizontal"
            android:paddingLeft="24dp"
            android:background="@drawable/selector_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewImageQ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/image_q"
                    android:textColor="@color/disable"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/textViewImageQSet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/x_image_q"
                    android:textColor="@color/disable"
                    android:textSize="16dp" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/separation" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row"
            android:orientation="horizontal"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:paddingLeft="24dp">

            <Switch
                android:id="@+id/switch2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingRight="24dp"
                android:textSize="20dp"
                android:text="@string/remove_loc"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/separation"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/row"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:paddingLeft="24dp">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:text="@string/opti_videos"/>

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/enable_opti_v"
                    android:textSize="16dp" />
            </LinearLayout>

            <Switch
                android:id="@+id/switch3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:paddingRight="24dp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/separation"/>

        <LinearLayout
            android:id="@+id/max_v_s"
            android:layout_width="match_parent"
            android:layout_height="@dimen/row"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal"
            android:paddingLeft="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewMaxV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/max_videos_size"
                    android:textColor="@color/disable"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/textViewMaxVS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/x_max_v_size"
                    android:textColor="@color/disable"
                    android:textSize="16dp" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/separation" />

        <LinearLayout
            android:id="@+id/video_q"
            android:layout_width="match_parent"
            android:layout_height="@dimen/row"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="60dp"
            android:orientation="horizontal"
            android:paddingLeft="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewVideoQ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/video_q"
                    android:textColor="@color/disable"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/textViewVQSet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/x_video_q"
                    android:textColor="@color/disable"
                    android:textSize="16dp" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/separation" />
    </LinearLayout>
</ScrollView>